# AutoReportAI

./: .env.docker.example  .env.example  .env.prod  .env.template  .gitignore  .pre-commit-config.yaml  AI_REPORT_GENERATION_SYSTEM_DESIGN.md  ANALYSIS_INDEX.md  Agent任务优化策略文档.md  CHANGELOG.md  CI-CD-README.md  CODE_RELATIONSHIPS.md  DEPLOYMENT.md  ENHANCED_DATA_SOURCE_GUIDE.md  FIXES_SUMMARY.md  FRONTEND_DESIGN_DOCUMENT.md  FRONTEND_DETAILED_IMPLEMENTATION.md  Makefile  PLACEHOLDER_AGENT_ARCHITECTURE.md  PRODUCTION_DEPLOYMENT.md  PROJECT_ANALYSIS.md  PROJECT_CLEANUP_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_zh.md  RELEASE_NOTES.md  SYSTEM_ARCHITECTURE.md  api_integration_plan.md  check_backend_minio.py  check_db_placeholders.sh  check_fix_status.md  check_health.sh  check_report_status.py  demo_report_generation.py  do_login.sh  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  fix_db_leaks.py  frontend-backend-integration-summary.md  (+39 more)
backend/: .env.example  .env.production.template  .flake8  .pre-commit-config.yaml  AGENTS_DIRECTORY_ANALYSIS.md  AGENTS_MIGRATION_PLAN.md  AGENT_REPORT_INTEGRATION_README.md  AGENT_TASK_INTEGRATION_DESIGN.md  CLAUDE_CODE_INSPIRED_LLAMAINDEX_AGENT_DESIGN.md  CURRENT_ARCHITECTURE_ANALYSIS.md  DDD_ARCHITECTURE_OPTIMIZATION_SUMMARY.md  Dockerfile  HYBRID_INTEGRATION_GUIDE.md  IMPLEMENTATION_GUIDE.md  MULTI_DATABASE_ARCHITECTURE.md  Makefile  ORCHESTRATOR_USAGE_GUIDE.md  PLACEHOLDER_ETL_IMPLEMENTATION.md  QUICK_REFACTORING_GUIDE.md  QUICK_REFACTORING_GUIDE_REVISED.md  QUICK_START.md  REFACTORING_PLAN.md  REVISED_CLEANUP_PLAN.md  SIMPLIFICATION_REFACTORING_PLAN.md  SINGLE_PLACEHOLDER_ANALYSIS.md  TASK_VALIDATION_INTEGRATION_EXAMPLES.md  TWO_PHASE_ARCHITECTURE_GUIDE.md  __init__.py  activate_env.sh  agent_test_report_20250905_082612.json  alembic.ini  analyze_imports.py  architecture_proposal.md  complete_real_test_report_20250905_091504.json  configure_ai_provider.py  context_migration_strategy.md  debug-deps.sh  detailed_import_analysis.py  diagnose_download_issue.py  docker-compose.prod.yml  (+76 more)
backend/app/: __init__.py  initial_data.py  main.py
backend/config/: development.yaml  production.yaml  staging.yaml
backend/docker/: Dockerfile.production  docker-compose.production.yml
backend/docs/: AGENTREQUEST_PARAMETER_FIX_COMPLETE.md  AGENTS_QUICK_REFERENCE.md  AGENTS_USAGE_REFERENCE.md  AGENT_ARCHITECTURE_REFACTORING_COMPLETE.md  AGENT_ARCHITECTURE_SETUP.md  AGENT_CONTEXT_FIRST_WORKFLOW.md  AGENT_CONTEXT_SYSTEM.md  AGENT_OPTIMIZATION_PLAN.md  AGENT_REFACTORING_SUMMARY.md  AGENT_REFACTORING_VERIFICATION_REPORT.md  AGENT_SYSTEM_REFACTORING_COMPLETE.md  AGENT_SYSTEM_TECHNICAL_ANALYSIS.md  AGENT_TOOL_REFACTORING_SUMMARY.md  AGENT_USAGE_ANALYSIS.md  API_ENDPOINTS_AND_SCHEMAS.md  API_V2_DOCUMENTATION.md  ARCHITECTURE_REFACTOR_SUMMARY.md  BACKEND_TESTING_GUIDE.md  BACKEND_TT_RECURSION_OPTIMIZATION_REPORT.md  (+105 more)
(+1986 files in other folders)
